--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2bc534b4",
+   "id": "18d80e72",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -43,14 +43,16 @@
     "        * `dir(ma_variable)`\n",
     "    * connaitre la documentation pour une variable : `help(ma_variable)`\n",
     "    * manipulations de conteneurs \n",
-    "        * accès à un élément précis : mon_conteneur[index] (l'index \n",
+    "        * accès à un élément précis : mon_conteneur[index] (l'index du premier élément est 0)\n",
+    "        * accéder à une tranche de l'élément (slice) : mon_conteneur[index_debut:index_fin:saut]\n",
+    "    * générer les nombres de 1 à 100 : `range(1, 101)` \n",
     "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "01b96618",
+   "id": "de1dce89",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71ef50a0",
+   "id": "90dec3ed",
    "metadata": {},
    "outputs": [],
    "source": []
