--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2a5bc2bf",
+   "id": "4ef8d91a",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -46,13 +46,15 @@
     "        * accès à un élément précis : mon_conteneur[index] (l'index du premier élément est 0)\n",
     "        * accéder à une tranche de l'élément (slice) : mon_conteneur[index_debut:index_fin:saut]\n",
     "    * générer les nombres de 1 à 100 : `range(1, 101)` (avoir tous les nombres pairs de 2 à 100 :  `list(range(2, 101, 2))`\n",
+    "    * pour les boucles on itère directement sur les éléments\n",
+    "    * pour les conditions : `if` / `elif` / `else`\n",
     "* exercice \"fizzbuzz\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "522c1704",
+   "id": "a1eee0b6",
    "metadata": {},
    "outputs": [
     {
@@ -74,78 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cd708dc8",
+   "execution_count": null,
+   "id": "42e01c90",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2,\n",
-       " 4,\n",
-       " 6,\n",
-       " 8,\n",
-       " 10,\n",
-       " 12,\n",
-       " 14,\n",
-       " 16,\n",
-       " 18,\n",
-       " 20,\n",
-       " 22,\n",
-       " 24,\n",
-       " 26,\n",
-       " 28,\n",
-       " 30,\n",
-       " 32,\n",
-       " 34,\n",
-       " 36,\n",
-       " 38,\n",
-       " 40,\n",
-       " 42,\n",
-       " 44,\n",
-       " 46,\n",
-       " 48,\n",
-       " 50,\n",
-       " 52,\n",
-       " 54,\n",
-       " 56,\n",
-       " 58,\n",
-       " 60,\n",
-       " 62,\n",
-       " 64,\n",
-       " 66,\n",
-       " 68,\n",
-       " 70,\n",
-       " 72,\n",
-       " 74,\n",
-       " 76,\n",
-       " 78,\n",
-       " 80,\n",
-       " 82,\n",
-       " 84,\n",
-       " 86,\n",
-       " 88,\n",
-       " 90,\n",
-       " 92,\n",
-       " 94,\n",
-       " 96,\n",
-       " 98,\n",
-       " 100]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(2, 101, 2))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b21b2bb",
+   "id": "f1db66be",
    "metadata": {},
    "outputs": [],
    "source": []
