--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8fa3b931",
+   "id": "645af529",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e05a7bc0",
+   "id": "7fa9db74",
    "metadata": {},
    "outputs": [
     {
@@ -76,16 +76,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f119b3b",
+   "execution_count": 23,
+   "id": "4a0236d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bool(\"une chaine\")=True, bool(\"\"), bool(3), bool(0), bool(-33), bool([]), bool([1])'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{bool(\"une chaine\")=}, {bool(\"\")=}, {bool(3), bool(0), bool(-33), bool([]), bool([1])'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9e3986",
+   "id": "5764d4c9",
    "metadata": {},
    "outputs": [],
    "source": []
