--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "645af529",
+   "id": "72f11994",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7fa9db74",
+   "id": "000e7f63",
    "metadata": {},
    "outputs": [
     {
@@ -76,29 +76,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "4a0236d9",
+   "execution_count": 25,
+   "id": "e9c904a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'bool(\"une chaine\")=True, bool(\"\"), bool(3), bool(0), bool(-33), bool([]), bool([1])'"
+       "'bool(\"une chaine\")=True, bool(\"\")=False, bool(3)=True, bool(0)=False, bool(-33)=True, bool([])=False, bool([1])=True, bool(None)=False'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f'{bool(\"une chaine\")=}, {bool(\"\")=}, {bool(3), bool(0), bool(-33), bool([]), bool([1])'"
+    "f'{bool(\"une chaine\")=}, {bool(\"\")=}, {bool(3)=}, {bool(0)=}, {bool(-33)=}, {bool([])=}, {bool([1])=}, {bool(None)=}'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5764d4c9",
+   "id": "09653b08",
    "metadata": {},
    "outputs": [],
    "source": []
