--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72f11994",
+   "id": "0419aaa2",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "000e7f63",
+   "id": "c7d5c838",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e9c904a2",
+   "id": "75ab3e87",
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +97,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "49a8d52d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcabcabc'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"abc\" * 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "09653b08",
+   "id": "2b0d504a",
    "metadata": {},
    "outputs": [],
    "source": []
