--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0419aaa2",
+   "id": "6db55142",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c7d5c838",
+   "id": "4e6cf889",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "75ab3e87",
+   "id": "01675a59",
    "metadata": {},
    "outputs": [
     {
@@ -97,29 +97,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "49a8d52d",
+   "execution_count": 33,
+   "id": "c35fbb8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'abcabcabc'"
+       "'fizzbuzz'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"abc\" * 0"
+    "\"fizz\" * 1 + \"buzz\" * 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b0d504a",
+   "id": "dc8d8457",
    "metadata": {},
    "outputs": [],
    "source": []
