--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6db55142",
+   "id": "be548470",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4e6cf889",
+   "id": "9cb74382",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "01675a59",
+   "id": "c9f27d81",
    "metadata": {},
    "outputs": [
     {
@@ -97,29 +97,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "c35fbb8e",
+   "execution_count": 38,
+   "id": "69568fee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'fizzbuzz'"
+       "'fizz'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"fizz\" * 1 + \"buzz\" * 1"
+    "\"fizz\" * (3 % 3 == 0) + \"buzz\" * (3 % 5 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "47cdc6bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 0)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(3 % 3 == 0), int(5 % 3 == 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8d8457",
+   "id": "1f2ed8a2",
    "metadata": {},
    "outputs": [],
    "source": []
