--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be548470",
+   "id": "78af0a5a",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9cb74382",
+   "id": "d9e1c1f7",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c9f27d81",
+   "id": "f710424d",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "69568fee",
+   "id": "e8fe6a36",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "47cdc6bb",
+   "id": "9b10ea1d",
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +139,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "b9cd7365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 or 2, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a0123049",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 and 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1f2ed8a2",
+   "id": "4e1754fc",
    "metadata": {},
    "outputs": [],
    "source": []
