--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78af0a5a",
+   "id": "13e94a8c",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d9e1c1f7",
+   "id": "cac37921",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f710424d",
+   "id": "dbf497bd",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e8fe6a36",
+   "id": "f354097b",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9b10ea1d",
+   "id": "d1d01e76",
    "metadata": {},
    "outputs": [
     {
@@ -139,29 +139,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "b9cd7365",
+   "execution_count": 45,
+   "id": "bb6af0e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 2)"
+       "3"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3 or 2, "
+    "3 or 1/0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a0123049",
+   "id": "44af1abf",
    "metadata": {},
    "outputs": [
     {
@@ -181,8 +181,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "66cb7011",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [44], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4e1754fc",
+   "id": "5b950f32",
    "metadata": {},
    "outputs": [],
    "source": []
