--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "13e94a8c",
+   "id": "85202771",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cac37921",
+   "id": "6aa64874",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "dbf497bd",
+   "id": "df9578b9",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f354097b",
+   "id": "e817777e",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d1d01e76",
+   "id": "d6ae2fad",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "bb6af0e3",
+   "id": "f4a978e4",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "44af1abf",
+   "id": "4ef6f19c",
    "metadata": {},
    "outputs": [
     {
@@ -181,28 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "66cb7011",
+   "execution_count": 52,
+   "id": "e9604285",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [44], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "ma_var = 2\n",
+    "if isinstance(ma_var, str) and ma_var.capitalize() == \"Toto\":\n",
+    "        print(\"youpi\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b950f32",
+   "id": "271550c6",
    "metadata": {},
    "outputs": [],
    "source": []
