--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "85202771",
+   "id": "68e65a0b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6aa64874",
+   "id": "f49f8d19",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "df9578b9",
+   "id": "d8dab729",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e817777e",
+   "id": "c0eb67a1",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d6ae2fad",
+   "id": "2415b4c2",
    "metadata": {},
    "outputs": [
     {
@@ -139,29 +139,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "f4a978e4",
+   "execution_count": 56,
+   "id": "7e8fcbbf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "3 or 1/0"
+    "\"\" or 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4ef6f19c",
+   "id": "4c21b5d3",
    "metadata": {},
    "outputs": [
     {
@@ -181,20 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "e9604285",
+   "execution_count": 54,
+   "id": "d07fe79f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_var = 2\n",
+    "ma_var = 2 # \"toto\"\n",
     "if isinstance(ma_var, str) and ma_var.capitalize() == \"Toto\":\n",
-    "        print(\"youpi\")"
+    "    print(\"youpi\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "271550c6",
+   "id": "d72a49ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a49e844e",
    "metadata": {},
    "outputs": [],
    "source": []
