--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8da0add3",
+   "id": "ec56870e",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,17 +10,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28555e93",
+   "execution_count": 5,
+   "id": "e5e780a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='./fizzbuzz.py' mode='r' encoding='UTF-8'>\n"
+     ]
+    }
+   ],
    "source": [
-    "f = open(\"./fizzbuzz.py\")"
+    "f = open(\"./fizzbuzz.py\")\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ba987a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mfalce/Bureau/pyt_cv_septembre_2022/tape_en_cours\n"
+     ]
+    }
+   ],
+   "source": [
+    "# savoir d'où est lancé l'interpreteur\n",
+    "import os \n",
+    "print(os.getcwd())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa916f14",
+   "id": "fa43a9a7",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -29,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cca07595",
+   "id": "277b57f5",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb50c63d",
+   "id": "38f30299",
    "metadata": {},
    "outputs": [],
    "source": []
