--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec56870e",
+   "id": "798b864f",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,27 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e5e780a2",
+   "execution_count": 6,
+   "id": "6a53ad4b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='./fizzbuzz.py' mode='r' encoding='UTF-8'>\n"
+      "<_io.TextIOWrapper name='./fizzbuzz.py' mode='r' encoding='utf8'>\n"
      ]
     }
    ],
    "source": [
-    "f = open(\"./fizzbuzz.py\")\n",
+    "f = open(\"./fizzbuzz.py\", encoding=\"utf8\")\n",
     "print(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ba987a51",
+   "id": "879631a9",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa43a9a7",
+   "id": "9d3eef93",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "277b57f5",
+   "id": "15563ae5",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f30299",
+   "id": "820ee87f",
    "metadata": {},
    "outputs": [],
    "source": []
