--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "798b864f",
+   "id": "6c9c69ef",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,27 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6a53ad4b",
+   "execution_count": 8,
+   "id": "d2277e69",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='./fizzbuzz.py' mode='r' encoding='utf8'>\n"
+      "['## Solution 1\\n', '# for nombre in range(1, 101):\\n', '#     if nombre % 5 == 0 and nombre % 3 == 0:\\n', '#         print(\"fizzbuzz\")\\n', '#     elif nombre % 3 == 0:\\n', '#         print(\"fizz\")\\n', '#     elif nombre % 5 == 0:\\n', '#         print(\"buzz\")\\n', '#     else:\\n', '#         print(nombre)\\n', '\\n', '## Solution 2 (sans les elif)\\n', '# for nombre in range(1, 101):\\n', '#     resultat = \"\"\\n', '#     # \"fizzbuzz\" = \"fizz\" + \"buzz\"\\n', '#     if nombre % 3 == 0:\\n', '#         resultat = resultat + \"fizz\"\\n', '#     if nombre % 5 == 0:\\n', '#         resultat = resultat + \"buzz\"\\n', '#     if resultat:\\n', '#         resultat = str(nombre)\\n', '#     print(resultat)\\n', '\\n', '## Solution 3 (sans les if)\\n', 'for nombre in range(1, 101):\\n', '    gauche_plus = \"fizz\" * (nombre % 3 == 0)\\n', '    droite_plus = \"buzz\" * (nombre % 5 == 0)\\n', '    gauche = gauche_plus + droite_plus\\n', '    droite = str(nombre)\\n', '    print(gauche or droite)\\n', '    # version en une ligne\\n', '    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\\n']\n"
      ]
     }
    ],
    "source": [
     "f = open(\"./fizzbuzz.py\", encoding=\"utf8\")\n",
-    "print(f)"
+    "lines = f.readlines()\n",
+    "f.close()\n",
+    "print(lines)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "879631a9",
+   "id": "20062299",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d3eef93",
+   "id": "ce16f37e",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -58,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "15563ae5",
+   "id": "2295deea",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820ee87f",
+   "id": "1193bf49",
    "metadata": {},
    "outputs": [],
    "source": []
