--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b28b6b7",
+   "id": "349de80e",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ce28f0e7",
+   "id": "4f742a90",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6ddb2dc4",
+   "id": "fc7ed37c",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bdfe8b8",
+   "id": "28a3be58",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -60,15 +60,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1695dd75",
+   "id": "0a508abc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def se_presenter():\n",
+    "    return \"Bonjour, je suis Matthieu\"\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff7ca60",
+   "id": "1afa11d5",
    "metadata": {},
    "outputs": [],
    "source": []
