--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "349de80e",
+   "id": "2f27e488",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4f742a90",
+   "id": "55e354ea",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fc7ed37c",
+   "id": "36fd92bc",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a3be58",
+   "id": "15acbe02",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -59,20 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a508abc",
+   "execution_count": 12,
+   "id": "86ae08a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1976979985.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [12], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def se_presenter:\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def se_presenter():\n",
     "    return \"Bonjour, je suis Matthieu\"\n",
-    "\n"
+    "\n",
+    "presentation = se_presenter()\n",
+    "print(presentation)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1afa11d5",
+   "id": "5a4949a4",
    "metadata": {},
    "outputs": [],
    "source": []
