--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f27e488",
+   "id": "b692aa14",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "55e354ea",
+   "id": "d659a6a8",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "36fd92bc",
+   "id": "159db8c1",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15acbe02",
+   "id": "12653120",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -59,23 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "86ae08a2",
+   "execution_count": 13,
+   "id": "948bf97e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1976979985.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [12], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def se_presenter:\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bonjour, je suis Matthieu\n"
      ]
     }
    ],
    "source": [
+    "# création de la fonction\n",
     "def se_presenter():\n",
     "    return \"Bonjour, je suis Matthieu\"\n",
-    "\n",
+    "############################\n",
+    "# utilisation de la fonction\n",
     "presentation = se_presenter()\n",
     "print(presentation)"
    ]
@@ -83,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a4949a4",
+   "id": "2e1b0f1d",
    "metadata": {},
    "outputs": [],
    "source": []
