--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b692aa14",
+   "id": "8f24464e",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d659a6a8",
+   "id": "f3ea395c",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "159db8c1",
+   "id": "e63a14bd",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12653120",
+   "id": "8eec5e86",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -59,32 +59,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "948bf97e",
+   "execution_count": 16,
+   "id": "1391345c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bonjour, je suis Matthieu\n"
+      "Bonjour, je suis Matthieu\n",
+      "Bonjour, je suis Joël\n"
      ]
     }
    ],
    "source": [
     "# création de la fonction\n",
-    "def se_presenter():\n",
-    "    return \"Bonjour, je suis Matthieu\"\n",
+    "def se_presenter(prenom):\n",
+    "    return f\"Bonjour, je suis {prenom}\"\n",
     "############################\n",
     "# utilisation de la fonction\n",
-    "presentation = se_presenter()\n",
+    "presentation = se_presenter(\"Matthieu\")\n",
+    "print(presentation)\n",
+    "\n",
+    "presentation = se_presenter(\"Joël\")\n",
     "print(presentation)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1b0f1d",
+   "id": "eb1b3255",
    "metadata": {},
    "outputs": [],
    "source": []
