--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f24464e",
+   "id": "96af1ca0",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f3ea395c",
+   "id": "19333ffa",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e63a14bd",
+   "id": "ff25ab38",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eec5e86",
+   "id": "c59b1849",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1391345c",
+   "id": "723ed054",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
    ],
    "source": [
     "# création de la fonction\n",
-    "def se_presenter(prenom):\n",
+    "def se_presenter(prenom:str):\n",
     "    return f\"Bonjour, je suis {prenom}\"\n",
     "############################\n",
     "# utilisation de la fonction\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb1b3255",
+   "id": "e38b28b3",
    "metadata": {},
    "outputs": [],
    "source": []
