--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96af1ca0",
+   "id": "e2313310",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "19333ffa",
+   "id": "2a45425d",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff25ab38",
+   "id": "0a92a6ed",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59b1849",
+   "id": "1b340e27",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "723ed054",
+   "execution_count": 19,
+   "id": "65803c97",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,8 @@
      "output_type": "stream",
      "text": [
       "Bonjour, je suis Matthieu\n",
-      "Bonjour, je suis Joël\n"
+      "Bonjour, je suis Joël\n",
+      "Bonjour, je suis 3\n"
      ]
     }
    ],
@@ -82,13 +83,16 @@
     "print(presentation)\n",
     "\n",
     "presentation = se_presenter(\"Joël\")\n",
+    "print(presentation)\n",
+    "\n",
+    "presentation = se_presenter(3)\n",
     "print(presentation)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38b28b3",
+   "id": "321a90f1",
    "metadata": {},
    "outputs": [],
    "source": []
