--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2aa0ea52",
+   "id": "270f6c7a",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,14 +10,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3c8ce80b",
+   "execution_count": 23,
+   "id": "1bfec9cc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "## Solution 1\n",
+      "\n",
+      "# for nombre in range(1, 101):\n",
+      "\n",
+      "#     if nombre % 5 == 0 and nombre % 3 == 0:\n",
+      "\n",
+      "#         print(\"fizzbuzz\")\n",
+      "\n",
+      "#     elif nombre % 3 == 0:\n",
+      "\n",
+      "#         print(\"fizz\")\n",
+      "\n",
+      "#     elif nombre % 5 == 0:\n",
+      "\n",
+      "#         print(\"buzz\")\n",
+      "\n",
+      "#     else:\n",
+      "\n",
+      "#         print(nombre)\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Solution 2 (sans les elif)\n",
+      "\n",
+      "# for nombre in range(1, 101):\n",
+      "\n",
+      "#     resultat = \"\"\n",
+      "\n",
+      "#     # \"fizzbuzz\" = \"fizz\" + \"buzz\"\n",
+      "\n",
+      "#     if nombre % 3 == 0:\n",
+      "\n",
+      "#         resultat = resultat + \"fizz\"\n",
+      "\n",
+      "#     if nombre % 5 == 0:\n",
+      "\n",
+      "#         resultat = resultat + \"buzz\"\n",
+      "\n",
+      "#     if resultat:\n",
+      "\n",
+      "#         resultat = str(nombre)\n",
+      "\n",
+      "#     print(resultat)\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Solution 3 (sans les if)\n",
+      "\n",
+      "for nombre in range(1, 101):\n",
+      "\n",
+      "    gauche_plus = \"fizz\" * (nombre % 3 == 0)\n",
+      "\n",
+      "    droite_plus = \"buzz\" * (nombre % 5 == 0)\n",
+      "\n",
+      "    gauche = gauche_plus + droite_plus\n",
+      "\n",
+      "    droite = str(nombre)\n",
+      "\n",
+      "    print(gauche or droite)\n",
+      "\n",
+      "    # version en une ligne\n",
+      "\n",
+      "    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
+      "\n",
       "['## Solution 1\\n', '# for nombre in range(1, 101):\\n', '#     if nombre % 5 == 0 and nombre % 3 == 0:\\n', '#         print(\"fizzbuzz\")\\n', '#     elif nombre % 3 == 0:\\n', '#         print(\"fizz\")\\n', '#     elif nombre % 5 == 0:\\n', '#         print(\"buzz\")\\n', '#     else:\\n', '#         print(nombre)\\n', '\\n', '## Solution 2 (sans les elif)\\n', '# for nombre in range(1, 101):\\n', '#     resultat = \"\"\\n', '#     # \"fizzbuzz\" = \"fizz\" + \"buzz\"\\n', '#     if nombre % 3 == 0:\\n', '#         resultat = resultat + \"fizz\"\\n', '#     if nombre % 5 == 0:\\n', '#         resultat = resultat + \"buzz\"\\n', '#     if resultat:\\n', '#         resultat = str(nombre)\\n', '#     print(resultat)\\n', '\\n', '## Solution 3 (sans les if)\\n', 'for nombre in range(1, 101):\\n', '    gauche_plus = \"fizz\" * (nombre % 3 == 0)\\n', '    droite_plus = \"buzz\" * (nombre % 5 == 0)\\n', '    gauche = gauche_plus + droite_plus\\n', '    droite = str(nombre)\\n', '    print(gauche or droite)\\n', '    # version en une ligne\\n', '    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\\n']\n"
      ]
     }
@@ -25,6 +89,8 @@
    "source": [
     "f = open(\"./fizzbuzz.py\", encoding=\"utf8\")\n",
     "lines = f.readlines()\n",
+    "for line in lines:\n",
+    "    print(line)\n",
     "f.close()\n",
     "print(lines)"
    ]
@@ -32,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "45a99b95",
+   "id": "ea10d973",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34798e2",
+   "id": "06338a75",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -60,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "03cb4a8b",
+   "id": "7f7ec4d5",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf507ad",
+   "id": "d45d5603",
    "metadata": {},
    "outputs": [],
    "source": []
