--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b986867",
+   "id": "7dd5c118",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -10,30 +10,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "998a7aa4",
+   "execution_count": 29,
+   "id": "877fec4d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n",
-      "b\n",
-      "c\n"
+      "## Solution 1\n",
+      "\n",
+      "# for nombre in range(1, 101):\n",
+      "\n",
+      "#     if nombre % 5 == 0 and nombre % 3 == 0:\n",
+      "\n",
+      "#         print(\"fizzbuzz\")\n",
+      "\n",
+      "#     elif nombre % 3 == 0:\n",
+      "\n",
+      "#         print(\"fizz\")\n",
+      "\n",
+      "#     elif nombre % 5 == 0:\n",
+      "\n",
+      "#         print(\"buzz\")\n",
+      "\n",
+      "#     else:\n",
+      "\n",
+      "#         print(nombre)\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Solution 2 (sans les elif)\n",
+      "\n",
+      "# for nombre in range(1, 101):\n",
+      "\n",
+      "#     resultat = \"\"\n",
+      "\n",
+      "#     # \"fizzbuzz\" = \"fizz\" + \"buzz\"\n",
+      "\n",
+      "#     if nombre % 3 == 0:\n",
+      "\n",
+      "#         resultat = resultat + \"fizz\"\n",
+      "\n",
+      "#     if nombre % 5 == 0:\n",
+      "\n",
+      "#         resultat = resultat + \"buzz\"\n",
+      "\n",
+      "#     if resultat:\n",
+      "\n",
+      "#         resultat = str(nombre)\n",
+      "\n",
+      "#     print(resultat)\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Solution 3 (sans les if)\n",
+      "\n",
+      "for nombre in range(1, 101):\n",
+      "\n",
+      "    gauche_plus = \"fizz\" * (nombre % 3 == 0)\n",
+      "\n",
+      "    droite_plus = \"buzz\" * (nombre % 5 == 0)\n",
+      "\n",
+      "    gauche = gauche_plus + droite_plus\n",
+      "\n",
+      "    droite = str(nombre)\n",
+      "\n",
+      "    print(gauche or droite)\n",
+      "\n",
+      "    # version en une ligne\n",
+      "\n",
+      "    # print(\"fizz\" * (nombre % 3 == 0) + \"buzz\" * (nombre % 5 == 0) or str(nombre))\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "f = open(\"./fizzbuzz.py\", encoding=\"utf8\")\n",
     "\n",
-    "lines = [\"a\", \"b\", \"c\"]\n",
+    "lines = f.readlines()\n",
     "for line in lines:\n",
     "    print(line)\n",
     "    \n",
     "#\n",
-    "for index in range(len(lines)):\n",
-    "    print(lines[index])\n",
+    "# for index in range(len(lines)):\n",
+    "#    print(lines[index])\n",
     "    \n",
     "f.close()"
    ]
@@ -41,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cdcb8dc0",
+   "id": "5eedecd3",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "616d8a69",
+   "id": "db63369c",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -69,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e79641f2",
+   "id": "626a2692",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1d5738",
+   "id": "7e2341d2",
    "metadata": {},
    "outputs": [],
    "source": []
